--- a/src/main/resources/commons-logging.properties
+++ b/src/main/resources/commons-logging.properties
@@ -1,2 +1,2 @@
 org.apache.commons.logging.log=org.apache.commons.logging.impl.Log4JLogger
-log4j.configuration=log4j.properties1
+log4j.configuration=log4j.properties
