--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,62 @@
 
 
 
+    <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>4.3.6</version>
+    </dependency>
+    <dependency>
+        <groupId>org.codehaus.castor</groupId>
+        <artifactId>castor-xml</artifactId>
+        <version>1.3.3</version>
+    </dependency>
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.3.1</version>
+    </dependency>
+
+
+    <!-- Apache POI Dependencies -->
+    <dependency>
+        <groupId>org.apache.servicemix.bundles</groupId>
+        <artifactId>org.apache.servicemix.bundles.poi</artifactId>
+        <version>3.8_3</version>
+        <scope>provided</scope>
+        <exclusions>
+            <exclusion>
+                <groupId>xml-apis</groupId>
+                <artifactId>xml-apis</artifactId>
+            </exclusion>
+            <exclusion>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+            </exclusion>
+            <exclusion>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml-schemas</artifactId>
+            </exclusion>
+            <exclusion>
+                <groupId>org.apache.xmlbeans</groupId>
+                <artifactId>xmlbeans</artifactId>
+            </exclusion>
+        </exclusions>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.servicemix.bundles</groupId>
+        <artifactId>org.apache.servicemix.bundles.xmlbeans</artifactId>
+        <version>2.4.0_5</version>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
+        <!-- Manually created bundle, from poi-ooxml-schemas -->
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-ooxml-schemas-iteco</artifactId>
+        <version>3.8</version>
+        <scope>provided</scope>
+    </dependency>
+
     <!-- Logging Dependencies -->
     <dependency>
         <groupId>org.slf4j</groupId>
