--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+
     <groupId>ru.roman.pammcontr</groupId>
     <artifactId>pammcontr_gui</artifactId>
     <version>1.0.0-SNAPSHOT</version>
@@ -11,49 +16,49 @@
     <description>PAMM Controller Application GUI Module</description>
     <packaging>jar</packaging>
 
-<dependencies>
 
+    <dependencies>
     <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>3.1</version>
-        <scope>provided</scope>
+        <scope>compile</scope>
     </dependency>
     <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>2.4</version>
-        <scope>provided</scope>
+        <scope>compile</scope>
     </dependency>
     <dependency>
         <groupId>commons-digester</groupId>
         <artifactId>commons-digester</artifactId>
         <version>2.1</version>
-        <scope>provided</scope>
+        <scope>compile</scope>
     </dependency>
     <dependency>
         <groupId>org.apache.servicemix.bundles</groupId>
         <artifactId>org.apache.servicemix.bundles.commons-collections</artifactId>
         <version>3.2.1_3</version>
-        <scope>provided</scope>
+        <scope>compile</scope>
     </dependency>
     <dependency>
         <groupId>org.apache.servicemix.bundles</groupId>
         <artifactId>org.apache.servicemix.bundles.commons-jxpath</artifactId>
         <version>1.3_1</version>
-        <scope>provided</scope>
+        <scope>compile</scope>
     </dependency>
     <dependency>
         <groupId>org.apache.servicemix.bundles</groupId>
         <artifactId>org.apache.servicemix.bundles.commons-beanutils</artifactId>
         <version>1.8.3_2</version>
-        <scope>provided</scope>
+        <scope>compile</scope>
     </dependency>
     <dependency>
         <groupId>org.apache.servicemix.bundles</groupId>
         <artifactId>org.apache.servicemix.bundles.dom4j</artifactId>
         <version>1.6.1_5</version>
-        <scope>provided</scope>
+        <scope>compile</scope>
         <exclusions>
             <exclusion>
                 <groupId>xml-apis</groupId>
@@ -65,7 +70,7 @@
         <groupId>org.apache.servicemix.bundles</groupId>
         <artifactId>org.apache.servicemix.bundles.jaxen</artifactId>
         <version>1.1.4_2</version>
-        <scope>provided</scope>
+        <scope>compile</scope>
     </dependency>
 
 
@@ -74,16 +79,19 @@
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
         <version>4.3.6</version>
+        <scope>compile</scope>
     </dependency>
     <dependency>
         <groupId>org.codehaus.castor</groupId>
         <artifactId>castor-xml</artifactId>
         <version>1.3.3</version>
+        <scope>compile</scope>
     </dependency>
     <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
         <version>2.3.1</version>
+        <scope>compile</scope>
     </dependency>
 
 
@@ -92,7 +100,7 @@
         <groupId>org.apache.servicemix.bundles</groupId>
         <artifactId>org.apache.servicemix.bundles.poi</artifactId>
         <version>3.8_3</version>
-        <scope>provided</scope>
+        <scope>compile</scope>
         <exclusions>
             <exclusion>
                 <groupId>xml-apis</groupId>
@@ -116,41 +124,47 @@
         <groupId>org.apache.servicemix.bundles</groupId>
         <artifactId>org.apache.servicemix.bundles.xmlbeans</artifactId>
         <version>2.4.0_5</version>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
-        <!-- Manually created bundle, from poi-ooxml-schemas -->
-        <groupId>org.apache.poi</groupId>
-        <artifactId>poi-ooxml-schemas-iteco</artifactId>
-        <version>3.8</version>
-        <scope>provided</scope>
+        <scope>compile</scope>
     </dependency>
 
     <!-- Logging Dependencies -->
     <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>1.7.5</version>
-        <scope>provided</scope>
+        <version>1.7.10</version>
+        <scope>compile</scope>
     </dependency>
     <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-log4j12</artifactId>
-        <version>1.7.5</version>
-        <scope>provided</scope>
+        <version>1.7.10</version>
+        <scope>compile</scope>
     </dependency>
     <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>jul-to-slf4j</artifactId>
-        <version>1.7.5</version>
-        <scope>provided</scope>
+        <version>1.7.10</version>
+        <scope>compile</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl-over-slf4j</artifactId>
+        <version>1.7.10</version>
+        <scope>compile</scope>
     </dependency>
     <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
         <version>1.2.17</version>
-        <scope>provided</scope>
+        <scope>compile</scope>
     </dependency>
+    <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+        <version>1.2</version>
+        <scope>compile</scope>
+    </dependency>
+
 
 
     <!-- Test Dependencies -->
@@ -166,7 +180,99 @@
         <version>1.9.5</version>
         <scope>test</scope>
     </dependency>
+    </dependencies>
 
-</dependencies>
 
+    <build>
+        <defaultGoal>package</defaultGoal>
+        <finalName>${project.artifactId}</finalName>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+            <testResource>
+                <directory>src/main/resources</directory>
+            </testResource>
+        </testResources>
+
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <fork>true</fork>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.15</version>
+                <configuration>
+                    <skip>false</skip>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                </configuration>
+            </plugin>
+
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.5.1</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>
+                                ${project.build.directory}/lib
+                            </outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <archive>
+                        <index>true</index>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>ru.roman.pammcontr.StartApp</mainClass>
+                            <useUniqueVersions>true</useUniqueVersions>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.3.2</version>
+                <configuration>
+                    <mainClass>ru.roman.pammcontr.StartApp</mainClass>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
 </project>
