deleted not nessasary components, iteration last

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,7 +12,7 @@ log4j.appender.stdConsole.layout.ConversionPattern=%d{yyyy.MM.dd HH:mm:ss.SSS} [
 
 # Second appender settings
 log4j.appender.fsRecorder=org.apache.log4j.RollingFileAppender
-log4j.appender.fsRecorder.File=${user.home}/.Bim/logs/application.log
+log4j.appender.fsRecorder.File=${user.home}/.PammControll/logs/application.log
 log4j.appender.fsRecorder.MaxFileSize=300KB
 # Keep backup files
 log4j.appender.fsRecorder.MaxBackupIndex=3
